fixed overflow boxes

--- a/web/pages/index.module.sass
+++ b/web/pages/index.module.sass
@@ -360,6 +360,17 @@
     display: inline-block
     width: 0
 
+  // word wrap and break
+  overflow-wrap: break-word
+  word-wrap: break-word
+  word-break: break-word
+
+  // auto hyphen
+  -ms-hyphens: auto
+  -moz-hyphens: auto
+  -webkit-hyphens: auto
+  hyphens: auto
+
 .gridItem
   position: relative
   width: calc(50% - 5px)
